<resources>
    <string name="app_name" translatable="false">Pokedex</string>
    <string name="title_lock_pokeball" translatable="false">Lock pokeball</string>
    <string name="title_location" translatable="false">Location</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreenActivity</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="pokemon_image" translatable="false">PokemonImage</string>
    <string name="pokemon_number" translatable="false">0000</string>
    <string name="pokemon_name" translatable="false">PokemonName</string>
    <string name="type_name" translatable="false">TypeName</string>
    <string name="shine_image" translatable="false">Shine</string>
    <string name="back_image" translatable="false">Back</string>
    <string name="next_image" translatable="false">Next</string>
    <string name="male_image" translatable="false">Male</string>
    <string name="search_button_image" translatable="false">SearchButtonImage</string>
    <string name="female_image" translatable="false">Female</string>
    <string name="pokemon_variant" translatable="false">PokemonVariant</string>
    <string name="pokemon_description" translatable="false">PokemonDescription</string>
    <string name="pokemon_type" translatable="false">PokemonType</string>
    <string name="text_choose_type">Choose your type(s)</string>
    <string name="text_choose_region">Choose a region</string>
    <string name="text_pokemon_area">Pokemons in this area</string>
    <string name="text_defense">Defender</string>
    <string name="text_attack">Attacker</string>
    <string name="text_region_name" translatable="false">Region</string>
    <string name="multiplier" translatable="false">2x</string>
    <string name="region_name" translatable="false">Region</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <!-- Strings that user can visualize -->
    <string name="title_pokedex">Pokedex</string>
    <string name="title_types">Types</string>
    <string name="title_regions">Regions</string>
    <string name="text_weakness">Weakness</string>
    <string name="search_pokemon_hint">Search by name or id</string>
    <string name="hp_status">HP: </string>
    <string name="atk_status">Attack: </string>
    <string name="def_status">Defense: </string>
    <string name="sp_atk_status">Sp. Atk: </string>
    <string name="sp_def_status">Sp. Def: </string>
    <string name="speed_status">Speed: </string>
    <string name="value_status">000</string>
    <string name="evolution_line">Evolution Line</string>
    <string name="weakness_and_resistances">Weakness and Resistances</string>
    <!-- Strings used for pokemon types -->
    <string name="normal">Normal</string>
    <string name="fighting">Fighting</string>
    <string name="flying">Flying</string>
    <string name="poison">Poison</string>
    <string name="ground">Ground</string>
    <string name="rock">Rock</string>
    <string name="bug">Bug</string>
    <string name="ghost">Ghost</string>
    <string name="steel">Steel</string>
    <string name="fire">Fire</string>
    <string name="water">Water</string>
    <string name="grass">Grass</string>
    <string name="electric">Electric</string>
    <string name="psychic">Psychic</string>
    <string name="ice">Ice</string>
    <string name="dragon">Dragon</string>
    <string name="dark">Dark</string>
    <string name="fairy">Fairy</string>
    <string name="unknown">Unknown</string>
    <!-- Strings used for feedback messages -->
    <string name="error_loading_pokemon">Error while loading pokemon {{id}} from API. Loading from local database.</string>
    <string name="error_loading_pokemons">Error while loading pokemons from API. Loading from local database.</string>
    <string name="error_loading_species">Error while loading species from API. Loading from local database.</string>
    <string name="error_loading_evolutions">Error while loading evolutions from API. Loading from local database.</string>
    <string name="error_loading_regions">Error while loading regions from API. Loading from local database.</string>
    <string name="error_loading_locations">Error while loading locations from API. Loading from local database.</string>
    <string name="error_loading_areas">Error while loading areas from API. Loading from local database.</string>


    <string name="error_not_found_pokemon">Any pokemon found.</string>
    <string name="error_not_found_types">Any type found.</string>
    <string name="error_not_found_type_relations">Any type relation found.</string>
    <string name="error_not_found_specie">Any specie found.</string>
    <string name="error_not_found_evolution">Any evolution found.</string>
    <string name="error_not_found_region">Any region found.</string>
    <string name="error_not_found_location">Any location found.</string>
    <string name="error_not_found_area">Any area found.</string>

    <string name="error_saving_pokemon">Error while saving pokemon {{id}}.</string>
    <string name="error_saving_types">Error while saving types.</string>
    <string name="error_saving_type_relations">Error while saving type relations.</string>
    <string name="error_saving_specie">Error while saving specie {{id}}.</string>
    <string name="error_saving_evolution">Error while saving evolution {{id}}.</string>
    <string name="error_saving_region">Error while saving region {{id}}.</string>
    <string name="error_saving_location">Error while saving location {{id}}.</string>
    <string name="error_saving_area">Error while saving area {{id}}.</string>

    <string name="error_db">Error while accessing database.</string>
    <string name="error_api">Error while accessing API.</string>
    <string name="error_unmapped">Unmapped Error.</string>



</resources>
