<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.location.LocationFragment">

    <LinearLayout
        android:id="@+id/breadcrumb_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/text_region_name"
            app:layout_constraintTop_toBottomOf="@id/search_line"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="16sp"
            android:text="@string/text_region_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/next_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nav_next"
            android:contentDescription="@string/next_image" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_line"
        app:layout_constraintTop_toBottomOf="@+id/breadcrumb_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="40dp"
            android:autofillHints="name"
            android:inputType="text"
            android:focusedByDefault="false"
            android:layout_marginEnd="16dp"
            android:hint="@string/search_pokemon_hint"
            />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:drawableTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/search_bar"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/search_button_image"
            app:tint="@color/white" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list_location"
        app:layout_constraintTop_toBottomOf="@id/search_line"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>