<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pokemon.PokemonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back_image"
            />

        <LinearLayout
            android:id="@+id/pokemon_variant"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_marginStart="48dp">

            <Spinner
                android:id="@+id/dropdown_varieties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/pokemon_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_variant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/bulbasaur"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/pokemon_name"
            />

        <TextView
            android:id="@+id/pokemon_number"
            android:layout_width="56dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="@id/pokemon_image"
            app:layout_constraintEnd_toStartOf="@id/pokemon_image"
            android:background="@drawable/pokemon_number_bg"
            android:text="@string/pokemon_number"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/shiny_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_shiny"
            app:layout_constraintBottom_toBottomOf="@+id/pokemon_image"
            app:layout_constraintStart_toEndOf="@+id/pokemon_image"
            android:contentDescription="@string/shine_image"
            />

        <LinearLayout
            android:id="@+id/type_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:id="@+id/pokemon_type1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/normal_type"
                android:textColor="@color/white"
                android:paddingVertical="2dp"
                android:paddingHorizontal="4dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="12dp"
                android:textStyle="bold"
                android:text="@string/pokemon_type" />

            <TextView
                android:id="@+id/pokemon_type2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/normal_type"
                android:textColor="@color/white"
                android:paddingVertical="2dp"
                android:paddingHorizontal="4dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="12dp"
                android:textStyle="bold"
                android:text="@string/pokemon_type" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gender_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/type_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            >
            <ImageView
                android:id="@+id/male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/male"
                android:src="@drawable/ic_male"
                android:paddingHorizontal="24dp"
                android:paddingVertical="4dp"
                app:tint="@color/white"
                android:contentDescription="@string/male_image"/>

            <ImageView
                android:id="@+id/female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_female"
                android:paddingHorizontal="24dp"
                android:paddingVertical="4dp"
                app:tint="@color/female"
                android:contentDescription="@string/female_image"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hp_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/gender_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/hp_bg"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/hp_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/hp_status"
                />
            <TextView
                android:id="@+id/hp_value"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/value_status"
                />
            <ProgressBar
                android:id="@+id/hp_bar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/stats_bar"
                android:progressTint="@color/hp"
                android:max="100"
                android:progress="25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attack_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hp_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/atk_bg"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/attack_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/atk_status"
                />
            <TextView
                android:id="@+id/attack_value"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/value_status"
                />
            <ProgressBar
                android:id="@+id/attack_bar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/stats_bar"
                android:progressTint="@color/atk"
                android:max="100"
                android:progress="25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/defense_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/attack_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/def_bg"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/defense_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/def_status"
                />
            <TextView
                android:id="@+id/defense_value"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/value_status"
                />
            <ProgressBar
                android:id="@+id/defense_bar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/stats_bar"
                android:progressTint="@color/def"
                android:max="100"
                android:progress="25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sp_atk_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/defense_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/sp_atk_bg"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sp_atk_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/sp_atk_status"
                />
            <TextView
                android:id="@+id/sp_atk_value"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/value_status"
                />
            <ProgressBar
                android:id="@+id/sp_atk_bar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/stats_bar"
                android:progressTint="@color/sp_atk"
                android:max="100"
                android:progress="25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sp_def_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sp_atk_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/sp_def_bg"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sp_def_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/sp_def_status"
                />
            <TextView
                android:id="@+id/sp_def_value"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/value_status"
                />
            <ProgressBar
                android:id="@+id/sp_def_bar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/stats_bar"
                android:progressTint="@color/sp_def"
                android:max="100"
                android:progress="25" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/speed_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sp_def_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/speed_bg"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/speed_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/speed_status"
                />
            <TextView
                android:id="@+id/speed_value"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/value_status"
                />
            <ProgressBar
                android:id="@+id/speed_bar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/stats_bar"
                android:progressTint="@color/speed"
                android:max="100"
                android:progress="25" />
        </LinearLayout>

        <TextView
            android:id="@+id/evolutions_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/evolution_line"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/speed_line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_list_evolutions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/evolutions_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/weakness_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weakness_and_resistances"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/recycler_list_evolutions"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_list_weakness"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintTop_toBottomOf="@id/weakness_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>