<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pokemon_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pokemon.PokemonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_choose_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_list_types"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:text="@string/text_choose_type"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_list_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            />

        <TextView
            android:id="@+id/text_defense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_list_types"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:text="@string/text_defense" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_list_defense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_defense"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/text_attack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_list_defense"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:text="@string/text_attack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_list_attack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_attack"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:visibility="gone"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

